# python-monorepo-poetry

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md
.run/: Run all unit tests.run.xml  xyz_app_a.run.xml  xyz_app_b.run.xml  xyz_app_c.run.xml  xyz_app_d.run.xml  xyz_lib_a.run.xml  xyz_lib_b.run.xml  xyz_lib_c.run.xml  xyz_lib_d.run.xml  xyz_lib_e.run.xml
apps/xyz_app_a/: pyproject.toml
apps/xyz_app_a/tests/: test_xyz_app_a.py
apps/xyz_app_a/xyz_app_a/: new_module.py
apps/xyz_app_b/: pyproject.toml
apps/xyz_app_b/tests/: test_xyz_app_b.py
apps/xyz_app_c/: pyproject.toml
apps/xyz_app_c/tests/: test_xyz_app_c.py
apps/xyz_app_c/xyz_app_c/: __init__.py
apps/xyz_app_d/: pyproject.toml
apps/xyz_app_d/tests/: test_xyz_app_d.py
apps/xyz_proj_a/: pyproject.toml
apps/xyz_proj_b/tests/: test_xyz_proj_b.py
apps/xyz_proj_c/: pyproject.toml
apps/xyz_proj_c/tests/: test_xyz_proj_c.py
apps/xyz_proj_e/: pyproject.toml
apps/xyz_proj_e/tests/: test_xyz_proj_e.py
apps/xyz_proj_f/: pyproject.toml
apps/xyz_proj_f/tests/: test_xyz_proj_f.py
libs/xyz_lib_a/: pyproject.toml
libs/xyz_lib_a/tests/: test_xyz_lib_a.py
libs/xyz_lib_a/xyz_lib_a/: __init__.py  foo.py
libs/xyz_lib_b/: pyproject.toml
libs/xyz_lib_b/tests/: test_xyz_lib_b.py
libs/xyz_lib_b/xyz_lib_b/: __init__.py  bar.py
libs/xyz_lib_c/: pyproject.toml
libs/xyz_lib_c/tests/: test_xyz_lib_c.py
libs/xyz_lib_c/xyz_lib_c/: foobar.py
libs/xyz_lib_d/: pyproject.toml
libs/xyz_lib_d/tests/: test_xyz_lib_d.py
libs/xyz_lib_d/xyz_lib_d/: __init__.py
libs/xyz_lib_e/: pyproject.toml
libs/xyz_lib_e/tests/: test_xyz_lib_e.py
projects/xyz_proj_a/tests/: test_xyz_proj_a.py
projects/xyz_proj_b/: pyproject.toml
projects/xyz_proj_d/: pyproject.toml
projects/xyz_proj_d/tests/: test_xyz_proj_d.py
tests/end_to_end/: pyproject.toml
tests/end_to_end/end_to_end/: test_projects_ab.py
