[tool.poetry]
name = "xyz_proj_f"
version = "0.1.0"
description = ""
authors = ["Thomas van Hees <8236465+thomasvanhees@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
