[tool.poetry]
name = "xyz_lib_b"
version = "0.1.0"
description = ""
authors = ["Thomas van Hees <8236465+thomasvanhees@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2"
xyz_lib_c = "0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
xyz_lib_c = { path = "../xyz_lib_c/", develop = true }
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
