[tool.poetry]
name = "xyz_lib_c"
version = "0.1.0"
description = ""
authors = ["Thomas van Hees <8236465+thomasvanhees@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
