[tool.poetry]
name = "end_to_end_tests"
version = "00.00.00"
description = ""
authors = ["Thomas van Hees <8236465+thomasvanhees@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.5"
xyz_lib_c = { path = "../../libs/xyz_lib_c/", develop = true }
xyz_lib_b = { path = "../../libs/xyz_lib_b/", develop = true }
xyz_lib_a = { path = "../../libs/xyz_lib_a/", develop = true }
xyz_proj_a = { path = "../../projects/xyz_proj_a/", develop = true }
xyz_proj_b = { path = "../../projects/xyz_proj_b/", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
